<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="12"
    android:orientation="horizontal"
    tools:context=".AddLocation" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="left|center_vertical"
        android:layout_marginTop="28dp"
        android:text="@string/profile_name" />

    <TextView
        android:id="@+id/longi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lati"
        android:layout_alignTop="@+id/textView3"
        android:layout_gravity="left|bottom"
        android:text="@string/searchin"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/okclick"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/currentbt"
        android:onClick="okclick"
        android:text="@android:string/ok" />

    <EditText
        android:id="@+id/locationname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textView1"
        android:hint="@string/profile_name"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="14dp"
        android:text="@string/latlang" />

    <TextView
        android:id="@+id/lati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/locationname"
        android:layout_below="@+id/locationname"
        android:layout_marginTop="19dp"
        android:text="@string/searchin"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lati"
        android:layout_alignBottom="@+id/lati"
        android:layout_alignParentLeft="true"
        android:text="@string/address" />

    <Button
        android:id="@+id/currentbt"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="getclick"
        android:text="@string/getloc" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="18dp"
        android:text="@string/volume" />

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="24dp" >

        <CheckBox
            android:id="@+id/checkSil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/silent"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <CheckBox
            android:id="@+id/checkWifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/checkRem"
            android:enabled="false"
            android:text="@string/wifi"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <CheckBox
            android:id="@+id/checkRem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/checkVib"
            android:text="@string/remnck"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <CheckBox
            android:id="@+id/checkVib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/checkSil"
            android:text="@string/vibrt"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <SeekBar
        android:id="@+id/volumekBar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView4"
        android:layout_toLeftOf="@+id/ringPick"
        android:layout_toRightOf="@+id/textView4" />

    <FrameLayout
        android:id="@+id/ringPick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/volumekBar" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:contentDescription="@string/ringtxt"
            android:src="@drawable/ic_rinpk_out" />

    </FrameLayout>

</RelativeLayout>